# sphinx-carousel

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject-min.toml  pyproject.toml
.github/workflows/: bootstrap.yml  ci.yml  pypi.yml
bootstrap/: Dockerfile  README.md  banner.js  bootstrap.scss  index.esm.js  index.umd.js  package.json  postcss.config.js  rollup.config.js
docs/: conf.py  extended_features.rst  getting_started.rst  index.rst  install.rst  native_features.rst  usage.rst
sphinx_carousel/: __init__.py  carousel.py  directives.py  multi_theme.py  nodes.py  unrelated.py
sphinx_carousel/_static/: bootstrap-carousel.css  bootstrap-carousel.js  bootstrap.css  bootstrap.js  carousel-custom.css  carousel-custom.css_t
tests/integration_tests/: test_version.py
tests/unit_tests/: conftest.py  test_buttons_on_top.py  test_captions.py  test_captions_below.py  test_controls.py  test_dark.py  test_data_ride.py  test_external_image.py  test_fade.py  test_figure_carousel.py  test_id_data_ride.py  test_image_alt.py  test_indicators.py  test_linked_images.py  test_myst.py  test_no_image_warn.py  test_placeholder.py  test_prefix.py  test_shadows.py  test_slides_only.py  test_static.py
tests/unit_tests/test_docs/test-buttons-on-top/sphinx-conf/: conf.py  index.rst
tests/unit_tests/test_docs/test-captions/: index.rst
tests/unit_tests/test_docs/test-captions-below-conf/: index.rst
tests/unit_tests/test_docs/test-captions-below/default/: index.rst
tests/unit_tests/test_docs/test-captions-below/sphinx-conf/: conf.py
tests/unit_tests/test_docs/test-controls/: index.rst
tests/unit_tests/test_docs/test-controls-conf/: conf.py  index.rst
tests/unit_tests/test_docs/test-controls/sphinx-conf/: index.rst
tests/unit_tests/test_docs/test-dark/sphinx-conf/: conf.py  index.rst
tests/unit_tests/test_docs/test-data-ride/: index.rst
tests/unit_tests/test_docs/test-external-image/: index.rst
tests/unit_tests/test_docs/test-fade/default/: index.rst
tests/unit_tests/test_docs/test-fade/sphinx-conf/: conf.py
tests/unit_tests/test_docs/test-figure-carousel/: index.rst
tests/unit_tests/test_docs/test-id-data-ride/: index.rst
tests/unit_tests/test_docs/test-image-alt/: index.rst
tests/unit_tests/test_docs/test-indicators/sphinx-conf/: conf.py  index.rst
tests/unit_tests/test_docs/test-linked-images/: index.rst
tests/unit_tests/test_docs/test-multi-theme/: conftest.py  test_duplicated_theme.py  test_parse_themes.py  test_poly_theme.py  test_single_theme.py  test_subdirs.py  test_theme.py
tests/unit_tests/test_docs/test-multi-theme/duplicated-theme/: conf.py  index.rst
tests/unit_tests/test_docs/test-multi-theme/poly-theme/: conf.py
tests/unit_tests/test_docs/test-multi-theme/single-theme/off/: conf.py
tests/unit_tests/test_docs/test-multi-theme/single-theme/on/: conf.py
tests/unit_tests/test_docs/test-multi-theme/single-theme/on2/: conf.py
tests/unit_tests/test_docs/test-multi-theme/subdirs/: conf.py  index.rst
tests/unit_tests/test_docs/test-multi-theme/subdirs/sub/: hello.rst
tests/unit_tests/test_docs/test-myst/: conf.py  index.md
tests/unit_tests/test_docs/test-no-image-warn/: index.rst
tests/unit_tests/test_docs/test-prefix-off/: conf.py  index.rst
tests/unit_tests/test_docs/test-shadows/sphinx-conf/: conf.py  index.rst
tests/unit_tests/test_docs/test-slides-only/: conf.py  index.rst
tests/unit_tests/test_docs/test-static-off/: conf.py
tests/unit_tests/test_docs/test-static-on/: unused.rst
tests/unit_tests/test_docs/test-static/off/: conf.py  index.rst
